# SDP_SoSe2016

./: .travis.yml  README.md  READ_ME  TO_DO
doc/: ROS_files_example.doc  coding_conventions_ROS_files  cpp_coding_convention_with_roslint  python_style_guide
src/sdp_allomapping/: CMakeLists.txt  README  README_ROS.md  package.xml
src/sdp_allomapping/launch/: demo.launch
src/sdp_egomapping/: CMakeLists.txt  README  README_ROS.md  package.xml
todo/: TODO_02052016
travis/: README.md  dependencies.rosinstall
